Fix Download Firefox button text on mobile screens (#5372)

--- a/src/amo/components/Header/styles.scss
+++ b/src/amo/components/Header/styles.scss
@@ -107,6 +107,7 @@
 .Header-button {
   margin-bottom: 12px;
   vertical-align: top;
+  white-space: nowrap;
 }
 
 .Header-developer-hub-link {
